feat: cria endpoint para criacao de exercicio
implementa a estrutura necessaria para criar o recurso de exercicio (usecase, repositorio e mapper); pode ser necessario alterar a implementacao, pois o uso do jdbctemplate nao e dos mais responsivos.