@@ -1,17 +1,15 @@
 package com.danielbrai.gymtonic.entrypoint.controller;
 
+import com.danielbrai.gymtonic.core.domain.CriarExercicioUseCase;
 import com.danielbrai.gymtonic.core.domain.ListarExercicioUseCase;
 import com.danielbrai.gymtonic.core.model.Exercicio;
-import com.danielbrai.gymtonic.entrypoint.mapper.ExercicioToExercicioViewMapper;
+import com.danielbrai.gymtonic.enablers.BaseMapper;
 import com.danielbrai.gymtonic.entrypoint.model.ExercicioView;
 import lombok.AllArgsConstructor;
-import org.springframework.web.bind.annotation.CrossOrigin;
-import org.springframework.web.bind.annotation.GetMapping;
-import org.springframework.web.bind.annotation.RequestMapping;
-import org.springframework.web.bind.annotation.RestController;
+import org.springframework.http.ResponseEntity;
+import org.springframework.web.bind.annotation.*;
 
 import java.util.List;
-import java.util.stream.Collectors;
 
 @RestController
 @CrossOrigin(origins = "*", maxAge = 3600)
@@ -19,12 +17,22 @@ import java.util.stream.Collectors;
 @AllArgsConstructor
 public class ExercicioController {
 
-    private final ExercicioToExercicioViewMapper<Exercicio, ExercicioView> exercicioToExercicioViewMapper;
+    private final BaseMapper<Exercicio, ExercicioView> exercicioToExercicioViewMapper;
+    private final BaseMapper<ExercicioView, Exercicio> exercicioViewToExercicioMapper;
     private final ListarExercicioUseCase listarExercicioUseCase;
+    private final CriarExercicioUseCase criarExercicioUseCase;
 
     @GetMapping("")
     public List<ExercicioView> listarTodos() {
         List<Exercicio> listaExercicios = this.listarExercicioUseCase.execute();
-        return listaExercicios.stream().map(this.exercicioToExercicioViewMapper::traduzir).collect(Collectors.toList());
+        return listaExercicios.stream().map(this.exercicioToExercicioViewMapper::traduzir).toList();
+    }
+
+    @PostMapping("")
+    public ResponseEntity<ExercicioView> criarExercicio(@RequestBody ExercicioView exercicio) {
+        Exercicio exercicioCriado = this.exercicioViewToExercicioMapper.traduzir(exercicio);
+        exercicioCriado = this.criarExercicioUseCase.execute(exercicioCriado);
+        ExercicioView exercicioCriadoViewModel = this.exercicioToExercicioViewMapper.traduzir(exercicioCriado);
+        return ResponseEntity.ok(exercicioCriadoViewModel);
     }
 }
